discussion/kv_engine/173825/173825_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51719: CBStatCollector::formatKey Simplify dynamic format args handling

As per comments in CBStatCollector::formatKey helper function
formatFromMap, the handling of dynamic format arguments is signicanlty
simpler with the introduction of dynamic labelled arguments in fmtlib
8 - see https://fmt.dev/latest/api.html#named-arguments

Remove the somewhat complex manual handling of this and delegate to
fmtlib.

Change-Id: I7c070cf327cb19f4db88d257e1cd768281c0b89a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-04-19 16:09:21.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-19 17:49:00.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45365/ : FAILURE

Compile error at ..\kv_engine\statistics\cbstat_collector.cc(14): fatal error C1083: Cannot open include file: "fmt/args.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45365/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38107/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38107/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16748/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/statistics/cbstat_collector.cc:14:10: error: "fmt/args.h" file not found [clang-diagnostic-error]
#include <fmt/args.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16748/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/statistics/cbstat_collector.cc:14:10:
error: "fmt/args.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16748/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6402/ : FAILURE

Compile error at [2022-04-19T16:40:19.156Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6402/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18863/ : FAILURE

Compile error at [2022-04-19T16:38:50.348Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: fmt/args.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18863/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18527/ : FAILURE

Compile error at [2022-04-19T16:38:43.796Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: fmt/args.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18527/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19565/ : FAILURE

Compile error at [2022-04-19T16:39:41.734Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19565/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17622/ : FAILURE

Compile error at [2022-04-19T16:16:41.234Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17622/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26932/ : FAILURE

Compile error at [2022-04-19T16:42:39.324Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26932/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6465/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15681/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-20 08:27:01.000000000
Message: 
Patch Set 1: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26931/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26931/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6402/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6402/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19565/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19565/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18527/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18527/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18863/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18863/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17622/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17622/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6464/ : FAILURE

Compile error at [2022-04-19T16:44:17.081Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: fmt/args.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6464/ )
----------------------------------------------------------------------------------------------------------------------
